Get rid of illegal reflective access warning