@@ -17,5 +17,6 @@ dependencies {
 tasks {
     withType<Test> {
         useJUnitPlatform()
+        jvmArgs = listOf("--add-opens", "java.base/java.io=ALL-UNNAMED")
     }
 }
